2010-07-07  Andreas Kupries  <andreask@activestate.com>

	* ico.tcl: [Bug 3007168]: Fixed padding used for 24x24 icons.
	* ico.man: Further allowing writeIcon to create missing files.
	* pkgIndex.tcl: Bumped version to 1.0.5.

2009-10-12  Aaron Faupell <afaupell@users.sourceforge.net>

	* ico.tcl fix error messages to be more clear and refactor fileext
	  into gettype in the process.

2009-05-21  Andreas Kupries  <andreask@activestate.com>

	* ico.man: Fixed issues in getIcon and writeIcon (semantic mismatches).
	* ico.tcl: With help by Aaron and Jeff to review and make the fixes simpler.
	* pkgIndex.tcl: Plus additional checks on file existence. Bumped version to 1.0.4.

2009-01-21  Andreas Kupries  <andreas_kupries@users.sourceforge.net>

	*
	* Released and tagged Tklib 0.5 ========================
	* 

2008-03-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* ico.tcl (::ico::writeIconICODATA, ::ico::writeIconICO): correct the
	* pkgIndex.tcl: icon table header height info (was doubling),
	update version to 1.0.3.

2007-5-17  Aaron Faupell <afaupell@users.sourceforge.net>

	* ico.tcl: fixed problem with reading BMPs and updated
	getFileIcon to search for additional icons (read CLSID)
	* ico.man: updated example and added verbage to getFileIcon

2007-02-23  Jeff Hobbs  <jeffh@ActiveState.com>

	* ico0.tcl (::ico::readDIBFromData): correct row calc for edge
	case.  Bump version to 0.3.1

	* ico.tcl (::ico::getFileIcon): fixed for better overall support.
	[Bug 1660234] (Griffiths).
	Bumped version to 1.0.2

2006-12-14  Aaron Faupell <afaupell@users.sourceforge.net>

	* ico.tcl: fixed problem in EXEtoICO and incremented version to 1.0.1

2006-12-12  Jeff Hobbs  <jeffh@ActiveState.com>

	* ico.tcl (::ico::getFileIcon): fixed missing close ]

2006-08-04  Jeff Hobbs  <jeffh@ActiveState.com>

	* ico0.tcl: added back ico 0.3 for compatibility
	* pkgIndex.tcl: note both 0.3 and 1.0 exist

2006-07-18  Andreas Kupries  <andreask@gactivestate.com>
