@@ -1,3 +1,9 @@
+2011-10-04  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* ico.tcl: add ico::Show example.
+	* ico0.tcl: improve default type retrieval
+	* pkgIndex.tcl: bump versions to 1.1 and 0.3.2
+
 2010-07-07  Andreas Kupries  <andreask@activestate.com>
 
 	* ico.tcl: [Bug 3007168]: Fixed padding used for 24x24 icons.
